[gd_scene load_steps=4 format=3 uid="uid://cp0udaecffqg4"]

[ext_resource type="Texture2D" uid="uid://dtrddjkyfbt7s" path="res://used_assests/hobgoblins/lance.png" id="1_q0yt0"]
[ext_resource type="Script" path="res://character/enemy/hobgoblin/util/lance/lance.gd" id="1_y2m76"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_lwawr"]
radius = 3.0
height = 14.0

[node name="Lance" type="Node2D"]
texture_filter = 1
script = ExtResource("1_y2m76")

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = 1.5708
texture = ExtResource("1_q0yt0")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(4, 0)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_lwawr")

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="."]
position = Vector2(-2.98023e-08, 0.25)
scale = Vector2(0.15, 0.325)

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenEnabler2D" to="." method="_on_visible_on_screen_enabler_2d_screen_exited"]
